# libllama

./: .gitignore  build.gradle
.github/workflows/: build-all-android.yml  build-vulkan-android.yml
app/: app_config.json  build.gradle  libraries.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama.h  llama_direct_jni.cpp
app/src/main/java/com/aicode/studio/: MainActivity.kt
app/src/main/java/com/aicode/studio/ai/: AIAgentManager.kt  LocalAIManager.kt  MemoryManager.kt  PromptBuilder.kt
app/src/main/java/com/aicode/studio/engine/: AIInferenceService.kt  BootReceiver.kt  HardwareAnalyzer.kt  InferenceConfig.kt  LlamaBridgeDirect.kt  ModelManager.kt  ModelSelectActivity.kt
app/src/main/java/com/aicode/studio/util/: LogManager.kt  PrefsManager.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
